Menambahkan bottom navigation dan fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Firebase Storage</string>
     <string name="choose_file_title">Choose File</string>
     <string name="open_button">Open</string>
+    <string name="bottommenu_upload">Upload</string>
+    <string name="bottommenu_list">List</string>
 </resources>
